# agensight

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  deploy.sh  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  setup.py  setup.py.backup
.github/workflows/: ci-cd.yml  debug-staging.yml  deploy.yml  dev-workflow.yml  simple-ci-cd.yml  staging.yml
agensight/: __init__.py  _version.py  config.py  config_template.py
agensight/_server/: README.md
agensight/_server/data/: agensight.db
agensight/_ui/: next.config.js  next.config.ts  package-lock.json  package.json
agensight/_ui/src/app/: page.tsx
agensight/_ui/src/app/dashboard/: layout.tsx
agensight/_ui/src/app/session-replay/: SessionChat.tsx  SessionInputBox.tsx  SettingsPanel.tsx  layout.tsx  page.tsx
agensight/_ui/src/app/sessions/: page.tsx
agensight/_ui/src/app/trace/: page.tsx
agensight/_ui/src/components/: GannChart.tsx  Header.tsx  HeaderWrapper.tsx  agent-graph.tsx  data-table.tsx
agensight/_ui/src/components/chat/: MessageStatus.tsx
agensight/_ui/src/components/metrics/: index.ts  metric-card.tsx
agensight/_ui/src/components/metrics-table/: metrics-table-pagination.tsx  metrics-table-toolbar.tsx
agensight/_ui/src/components/sidebar/: index.tsx
agensight/_ui/src/components/trace-details/: index.ts
agensight/_ui/src/components/ui/: sheet.tsx  table.tsx  toast.tsx  tooltip.tsx
agensight/_ui/src/hooks/: use-trace-column.ts
agensight/_ui/src/lib/: agentSimulation.ts  fallbackConfigs.ts  models.ts
agensight/_ui/src/lib/services/: config.ts  llm.ts  traces.ts
agensight/_ui/src/lib/types/: agent.ts
agensight/eval/: __init__.py  evaluate.py  geval.py  telemetry.py
agensight/eval/metrics/: __init__.py  base.py  indicator.py  utils.py
agensight/eval/metrics/contextual_precision/: contextual_precision.py
agensight/eval/metrics/contextual_recall/: contextual_recall.py
agensight/eval/metrics/contextual_relevancy/: contextual_relevancy.py
agensight/eval/metrics/conversational_g_eval/: conversational_g_eval.py
agensight/eval/metrics/geval/: __init__.py  evaluate_gval.py  g_eval.py  template.py  utils.py
agensight/eval/metrics/task_completion/: task_completion.py
agensight/eval/metrics/tool_correctness/: tool_correctness.py
agensight/eval/models/: __init__.py  base_model.py
agensight/eval/models/embedding_models/: azure_embedding_model.py  local_embedding_model.py  openai_embedding_model.py
agensight/eval/models/llms/: anthropic_model.py  azure_model.py  local_model.py  openai_model.py
agensight/eval/models/mlllms/: gemini_model.py  openai_model.py
agensight/eval/storage/: eval.db
agensight/server/: README.md  app.py  requirements.txt
agensight/server/routes/: trace.py
agensight/tracing/: db.py  decorators.py  exporter_db.py  exporter_prod.py  exporters.py  setup.py  utils.py
agensight/ui/: next.config.js  package-lock.json  package.json
agensight/ui/src/app/: globals.css  layout.tsx  page.tsx
agensight/ui/src/app/dashboard/: layout.tsx  page.tsx
agensight/ui/src/app/session/: layout.tsx  page.tsx
agensight/ui/src/app/session-replay/: layout.tsx  page.tsx
agensight/ui/src/app/sessions/: layout.tsx  page.tsx
agensight/ui/src/app/trace/: client.tsx  page.tsx
agensight/ui/src/app/traces/: page.tsx
agensight/ui/src/components/: GannChart.tsx  Header.tsx  HeaderWrapper.tsx  QueryProvider.tsx  ReactTable.tsx  ThemeProvider.tsx  agent-graph.tsx  agent-info.tsx  client-only.tsx  site-header.tsx  trace-detail-page.tsx
agensight/ui/src/components/metrics-table/: index.tsx
agensight/ui/src/components/sidebar/: index.tsx
agensight/ui/src/hooks/: use-metrics-column.ts
agensight/ui/src/lib/: utils.ts
agensight/ui/src/types/: type.ts
docs/: agent-configuration.md  evaluations.md  sdk-reference.md
examples/: chatbot_decorators_openai.py  langraph_demo.py
examples/evaluations/: conversation_completeness.py  conversational_geval.py  conversational_relevancy.py  geval.py  task_completion.py  tool_correctness.py
examples/evaluations/.eval/: .deepeval_telemetry.txt
examples/tracing/: chatbot_decorators_langraph.py  chatbot_decorators_langraph_II.py  chatbot_decorators_openai.py  chatbot_decorators_openai_prompt.py  langgraph_demo.py
(+23 files in other folders)
