[build-system]
requires = ["setuptools>=61.0", "wheel", "packaging>=21.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []  # This fixes the license-file issue

[project]
name = "agensight-dev"
version = "0.5.4"
description = "A Python SDK for logging and visualizing OpenAI agent interactions"
authors = [{name = "Pype", email = "deepesh@pypeai.com"}]
license = {text = "MIT"}
readme = "readme.sdk.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
        "openai",
        "requests",
        "flask",
        "nest_asyncio",
        "flask_cors",
        "fastapi",
        "uvicorn",
        "ragas",
        "sqlalchemy",
        "pydantic",
        "starlette",
        "typing-extensions",
        "python-multipart",
        "werkzeug",
        "jinja2",
        "aiofiles",
        "click",
        "opentelemetry-sdk",
        "opentelemetry-api",
        "opentelemetry-instrumentation",
        "opentelemetry-instrumentation-openai",
        "anthropic",
        "scikit-learn>=1.0.0",
        "pandas>=1.3.0",
        "numpy>=1.20.0",
        "google-generativeai",  # For Gemini model support
        "anthropic",  # For Claude model support
        "retry",  # For retry functionality
        "rich", 
    ]

[project.scripts]
agensight = "cli.main:main"

[project.urls]
Homepage = "https://github.com/pype-ai/agensight"
Issues = "https://github.com/pype-ai/agensight/issues"